# rpi-camera

./: CMakeLists.txt  README.md
include/: typedefs.h
src/: H264Encoder.cpp  H264Encoder.h  Jpeg.cpp  Jpeg.h  capture.cpp  capture.h  ffmpeg-v4l2.cpp  typedefs.h  v4l2_yuv420.cpp
